# MyCEL

./: Basic_Library.vcxproj  Basic_Library.vcxproj.filters  CMakeLists.old.txt  CMakeLists.txt  MyCEL.json  Project.MyCEL.cmakecs  packages.config
Code/: ConfigFile.cpp  DistributionHelper.cpp  GlobalParameters.cpp  IConfigFile.cpp  IMATLABFileWriteable.cpp  MATLABFileHandler.cpp  StartOptions.cpp
Headers/: BasicIncludes.h  BasicMacros.h  ConfigFile.h  DistributionHelper.h  GlobalParameters.h  IConfigFile.h  IMATLABFileWriteable.h  Is_Callable.h  Is_Container.h  Logger.h  MATLABClassFinder.h  MATLABFileHandler.h  NoCopy.h  PreprocessorMakros.h  Readme_Basic.txt  StartOptions.h  ThreadManager.h  Timer.h  Typelist.h  has_x.h  std_extensions.h
basics/: BasicIncludes.cpp  BasicIncludes.h  BasicMacros.h  GlobalParameters.h  Logger.h  StartOptions.cpp  StartOptions.h  ThreadManager.h  Timer.h
cmake/: FindCMakeCS.cmake  FindCMakeJSON.cmake  FindVCPKG.cmake
include/MyCEL/basics/: BasicIncludes.h  BasicMacros.h  EnumFwd.hpp  Logger.h  SimpleSmartEnum.h  StartOptions.h  ThreadManager.h  Timer.h  Typelist.h  concepts.h  concepts.hpp  enumhelpers.h  templatehelpers.h
include/MyCEL/intrin/: svml_prolog.h
include/MyCEL/intrin/svml/: avx_svml_intrin.h
include/MyCEL/math/: Coordinates.h  DistributionCalculator.h  DistributionHelper.h  GSL_Implicit_Solver_Derivative_Free.h  Geometry.h  Implicit_Solver.h  math_constants.h  random_helpers.h  sincos.h
include/MyCEL/simd_rand/: simd_normal_dist.h
include/MyCEL/stdext/: is_arithmetic_container.h  is_associative_container.h  is_container.h  is_eigen3_type.h  is_nested_arithmetic_container.h  is_nested_container.h  is_optional.hpp  is_resizeable_container.h  is_sequentiel_container.h  is_string.h
include/MyCEL/types/: metainfo.hpp  operators.hpp  static_map.hpp
include/MyCEL/utils/: CoreInfo.h  HPCEnvReader.h  ProcessorInformation.h  ThreadDispatcher.h
include/basics/: BasicIncludes.h  BasicMacros.h  SimpleSmartEnum.h  ThreadManager.h  Timer.h
include/intrin/svml/: avx512_svml_intrin.h  avx_svml_intrin.h
include/math/: Coordinates.h  DistributionCalculator.h  DistributionHelper.h  GSL_Implicit_Solver.h  math_constants.h  random_helpers.h  sincos.h
include/simd_rand/: simd_lcg.h
include/stdext/: get_array_size.h  is_arithmetic_container.h  is_callable.h  is_complex.h  is_container.h  is_detected.h  is_memory_sequentiel_container.h  is_nested_arithmetic_container.h  is_nested_container.h  is_resizeable_container.h  is_sequentiel_container.h  is_string.h  std_extensions.h
include/types/: operators.hpp  static_map.hpp  strongtype.hpp
include/utils/: CoreInfo.h  HPCEnvReader.h  NamedType.hpp  ProcessorInformation.h  ThreadDispatcher.h  ThreadPool.h
math/: ApproxJacobian.h  Coordinates.h  DistributionCalculator.h  DistributionHelper.cpp  DistributionHelper.h  GSL_Implicit_Solver.h  GSL_Implicit_Solver_Derivative_Free.h  Geometry.h  Implicit_Solver.h  math_constants.h  random_helpers.h  sincos.h
simd_rand/: constants.h  definitions.h  simd_lcg.h  simd_normal_dist.h
src/basics/: BasicIncludes.cpp  GlobalParameters.cpp  StartOptions.cpp  ThreadManager.cpp
src/math/: DistributionHelper.cpp
src/stdext/: test.cpp
src/utils/: CoreInfo.cpp  ProcessorInformation.cpp  hpcenvreader.cpp
stdext/: get_array_size.h  is_arithmetic_container.h  is_associative_container.h  is_boost_multiarray.h  is_callable.h  is_complex.h  is_container.h  is_detected.h  is_eigen3_type.h  is_memory_sequentiel_container.h  is_nested_arithmetic_container.h  is_nested_container.h  is_resizeable_container.h  is_string.h  std_extensions.h
targets/: MyCEL.cmakecs  MyCEL.target.json  basics.cmakecs  basics.target.json  intrin.cmakecs  intrin.target.json  math.cmakecs  math.target.json  simd_rand.cmakecs  simd_rand.target.json  stdext.cmakecs  stdext.target.json  stdext_test.cmakecs  stdext_test.target.json  types.cmakecs  types.target.json  utils.cmakecs  utils.target.json
tests/: CMakeLists.txt  testing.cpp
utils/: CoreInfo.cpp  CoreInfo.h  HPCEnvReader.h  ProcessorInformation.cpp  ProcessorInformation.h  ThreadDispatcher.h  hpcenvreader.cpp
